Fixing the overlapping blocks at the top of the page

--- a/css/local.sass
+++ b/css/local.sass
@@ -336,6 +336,9 @@ p, li
 #foundry-docs
   $datatypes: "text" #0074D9, "number" #39CCCC, "location" #3D9970, "calendar_date" #FF851B
 
+  .endpoint
+    width: 67%
+
   .metadata
     margin: 1em
     width: 30%
